# arete-take-home

./: .env.example  .gitignore  FUTURE_WORK.md  Makefile  README.md  app.py  pyproject.toml  pyrightconfig.json
data/raw/: inventory_management.xlsx
notebooks/: inventory_analysis.ipynb
outputs/: below_reorder_level.csv  dead_inventory.csv  executive_summary.md  key_metrics.json  stockout_risks.csv
src/: __init__.py
src/clients/: __init__.py  retail_client.py
src/core/: __init__.py  analysis.py  insights.py  parsers.py  quality.py  reconciliation.py
